* class PanAPIConnector : added support for device uptime
* update predefined.xml to 8020-4723
* new class ServiceSrcPortMapping
* class-AddressGroup - implement method hasGroupinGroup and getGroupNamerecursive
* class-IPsecTunnel - extend with more validation and warnings
* class-NatRule.php - introduce method API_setNoSNAT / API_setNoDNAT

utils:
rules-edit: new action dsri-set:[bool], dsri-Set-FastAPI:[bool] => default value is false
rules-edit: action 'display' extend with DSRI information, if "Disable Server Response Inspection" is enabled for security rule
rules-edit: action'nameRename' extend for additional variable usage like $$current.name$$ and $$sequential.number$$
rules-edit: new action 'app-Fix-Dependencies' to display missing dependencies, with additional argument 'app-Fix-Dependencies:yes' all missing app-id dependencies are added
rules-edit: new action 'securityProfile-remove-FastAPI'
rules-edit: new filter (location is.parent.of [DeviceGroup])
rules-edit: new filter 'app has.missing.dependencies'
download-predefined: introduction of new util to download predefined.xml especially for APP-id datebase
address-edit: new action split-large-address-group
address-edit: new action AddToGroup
rules-edit: new 'filter=(service has.value.only [443])'
rules-edit: new 'filter=(snathost has.from.query subquery1)' 'subquery1=([all filters possible from address-edit])'
rules-edit: new 'filter=(snathost.count - >,<,=,!)'
rules-edit: extend actions=name-Prepend/name-Append/name-Rename with argument accept63characters as bool
address-merger: introduce argument debugapi and exportcsv | which print out per object value the objects replaced by the kept one | improve output for ancestor
service-merger: introduce new dupalgorithm sameDstSrcport
service-edit: new filter (value string.eq [DstPort])
service-edit: new filter (overrides.upper.level/overriden.at.lower.level)

bugfix:
- fixed rule 'filter=(rule has.destination.nat)'